Boolean_set_operations_2/demo/Boolean_set_operations_2/errors/m_helper is not a class,
This error was genrated at 14:00 on 4/7/18 IST

In file included 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_region_graphics_item.h:24:0,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_set_graphics_item.h:24,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Circular_polygons.h:26,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:72:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_boundary_graphics_item.h: In constructor ‘CGAL::Qt::Piecewise_boundary_graphics_item<Helper, Draw_piece_, Piece_bbox_>::Piecewise_boundary_graphics_item(Helper*, const Draw_piece&, const Piece_bbox&)’:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_boundary_graphics_item.h:55:16: error: ‘m_helper’ is not a class, namespace, or enumeration
     m_boundary=m_helper::Polygon_2;
                ^

In file included from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_set_graphics_item.h:24:0,
                 from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Circular_polygons.h:26,
                 from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:72:
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_region_graphics_item.h: In constructor ‘CGAL::Qt::Piecewise_region_graphics_item<Helper, Draw_piece_, Piece_bbox_>::Piecewise_region_graphics_item(Helper*, const Draw_piece&, const Piece_bbox&)’:
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_region_graphics_item.h:59:17: error: ‘m_helper’ is not a class, namespace, or enumeration
        m_region=m_helper::Polygon_with_holes_2;     
                 ^

CMakeFiles/Boolean_set_operations_2.dir/build.make:154: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o' failed
make[2]: *** [CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o] Error 1
CMakeFiles/Makefile2:515: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/all' failed
make[1]: *** [CMakeFiles/Boolean_set_operations_2.dir/all] Error 2
Makefile:94: recipe for target 'all' failed
make: *** [all] Error 2






updated error with change names
In file included 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_region_graphics_item.h:24:0,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_set_graphics_item.h:24,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Circular_polygons.h:26,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:72:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_boundary_graphics_item.h: In constructor ‘CGAL::Qt::Piecewise_boundary_graphics_item<Gps_traits, Draw_piece_, Piece_bbox_>::Piecewise_boundary_graphics_item(Gps_traits*, const Draw_piece&, const Piece_bbox&)’:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_boundary_graphics_item.h:55:16: error: ‘m_traits’ is not a class, namespace, or enumeration
     m_boundary=m_traits::Polygon_2;
                ^

In file included from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_set_graphics_item.h:24:0,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Circular_polygons.h:26,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:72:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_region_graphics_item.h: In constructor ‘CGAL::Qt::Piecewise_region_graphics_item<Gps_traits, Draw_piece_, Piece_bbox_>::Piecewise_region_graphics_item(Gps_traits*, const Draw_piece&, const Piece_bbox&)’:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_region_graphics_item.h:54:17: error: ‘m_traits’ is not a class, namespace, or enumeration
        m_region=m_traits::Polygon_with_holes_2;     
                 ^

CMakeFiles/Boolean_set_operations_2.dir/build.make:154: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o' failed
make[2]: *** [CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o] Error 1
CMakeFiles/Makefile2:515: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/all' failed
make[1]: *** [CMakeFiles/Boolean_set_operations_2.dir/all] Error 2
Makefile:94: recipe for target 'all' failed
make: *** [all] Error 2


Commented initialization of piecewise_region_graphics_item piecewise_boundary_graphics_item by every class using its public accessable constructor and the respective constructors
so solved
